Fix stuck at 1 when first bidder, Max bid grey out

--- a/web/src/games/estatebuyer/BidPanelComponent.css
+++ b/web/src/games/estatebuyer/BidPanelComponent.css
@@ -1,9 +1,9 @@
 .BidPanel {
-    background-color: rgb(164, 211, 196);
     padding: 5px;
     margin: 0 auto;
     text-align: center;
     overflow: hidden;
+    max-width: 580px;
 }
 
 .BidPanel:after { 
